# mpi-examples

./: CMakeLists.txt
src/: CMakeLists.txt  draft.cpp  echo.h  ex1-hello.cpp  ex10-scatter.cpp  ex11-alltoall.cpp  ex12-async.cpp  ex13-pi.cpp  ex2-rank.cpp  ex3-branching.cpp  ex4-barrier.cpp  ex5-send.cpp  ex6-cyclic.cpp  ex7-sendrecv.cpp  ex8-bcast.cpp  ex9-reduce.cpp  matvec_row.cpp
